# aws-iot-custom-auth-example

./: Cargo.toml  README.md
src/: main.rs
