[package]
name = "aws_iot_play_fab_auth_lambda"
version = "0.1.0"
edition = "2021"
autobins = false

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_runtime = "0.7"
tokio = { version = "1", features = ["macros"] }
reqwest = { version = "0.11.12", features = ["json"]}
serde = "1.0.147"
serde_json = "1.0.87"
openssl = { version = "0.10", features = ["vendored"] }
base64 = "0.13.1"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
